--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@next/font": "13.2.3",
-    "@vidstack/react": "^0.4.2",
-    "graphql": "^14.7.0",
-    "hls.js": "^1.3.4",
-    "next": "13.2.3",
-    "plyr-react": "^5.1.2",
+    "@headlessui/react": "^1.7.17",
+    "@next/font": "14.0.3",
+    "@vidstack/react": "^0.6.14",
     "apollo-boost": "0.4.9",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "react-player": "^2.12.0",
+    "graphql": "^16.8.1",
+    "hls.js": "^1.4.12",
+    "next": "^14.0.3",
+    "plyr-react": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-player": "^2.13.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
-    "vidstack": "^0.4.2"
+    "vidstack": "^0.6.14"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   }
 }
